Working python setup

--- a/swig/makefile
+++ b/swig/makefile
@@ -1,7 +1,8 @@
 python:
-	swig -python -c++ -o titanlib_wrap_python.cpp titanlib.i
-	g++ -c titanlib.cpp titanlib_wrap_python.cpp -I/usr/include/python2.7 -fPIC -rdynamic
-	g++ -shared titanlib.o titanlib_wrap_python.o -o _titanlib.so -lc -lstdc++ -L/usr/lib/gcc/x86_64-linux-gnu/7/
+	swig -python -c++ -o titanlib_wrap_python.cpp -features autodoc=2 titanlib.i
+	#g++ -c titanlib.cpp titanlib_wrap_python.cpp -I/usr/include/python3.6 -fPIC -rdynamic
+	#g++ -shared titanlib.o titanlib_wrap_python.o -o _titanlib.so -lc -lstdc++ -L/usr/lib/gcc/x86_64-linux-gnu/7/
+	cp titanlib.h titanlib.py titanlib.cpp titanlib_wrap_python.cpp README.rst Python
 
 r:
 	swig -c++ -r -o titanlib_wrap_r.cpp titanlib.i
