--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,7 @@
-cmake_minimum_required(VERSION 2.8)
-
-# Change policy to allow a version to be set
-cmake_policy(SET CMP0048 NEW)
-project(titanlib VERSION 0.1.0)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra -Wno-unused-parameter -fPIC")
 
 ## Add libtitanlib
+include_directories(${PROJECT_SOURCE_DIR}/include)
 add_library(titanlib titanlib.cpp)
 
 # Set up public headers for liba
