Move swig out of src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,20 @@ cmake_policy(SET CMP0048 NEW)
 project(titanlib VERSION 0.1.0)
 
 # Add swig subdirectory
-add_subdirectory(src)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra -Wno-unused-parameter -fPIC")
+set(CMAKE_BUILD_TYPE Release)
+
+
+## Add libtitanlib
+include_directories(./include)
+file(GLOB SOURCES "src/*.cpp")
+add_library(titanlib ${SOURCES})
+set_target_properties(titanlib PROPERTIES PUBLIC_HEADER "include/titanlib.h")
+install(TARGETS titanlib
+      EXPORT CMakeSwigTargets
+      PUBLIC_HEADER DESTINATION include
+      ARCHIVE DESTINATION lib
+      LIBRARY DESTINATION lib
+      )
+
+add_subdirectory(SWIG)
