--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,10 @@ project(titanlib VERSION 0.1.0)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra -Wno-unused-parameter -fPIC")
 set(CMAKE_BUILD_TYPE Release)
 
-
 ## Add libtitanlib
 include_directories(./include)
 file(GLOB SOURCES "src/*.cpp")
-add_library(titanlib ${SOURCES})
+add_library(titanlib SHARED ${SOURCES})
 set_target_properties(titanlib PROPERTIES PUBLIC_HEADER "include/titanlib.h")
 install(TARGETS titanlib
       EXPORT CMakeSwigTargets
@@ -21,4 +20,5 @@ install(TARGETS titanlib
       LIBRARY DESTINATION lib
       )
 
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 add_subdirectory(SWIG)
