--- a/SWIG/CMakeLists.txt
+++ b/SWIG/CMakeLists.txt
@@ -7,3 +7,9 @@ option(BUILD_PYTHON "Build Python SWIG module" ON)
 if(BUILD_PYTHON)
     add_subdirectory(python)
 endif()
+
+# Add subdirectories for each language if desired
+option(BUILD_R "Build R SWIG module" ON)
+if(BUILD_R)
+    add_subdirectory(R)
+endif()
