--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra -Wno-unused-parameter -fPIC")
 
+find_package(Boost  REQUIRED)
+
 ## Add libtitanlib
 include_directories(${PROJECT_SOURCE_DIR}/include)
 add_library(titanlib ${SOURCES})
