--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -12,7 +12,7 @@ jobs:
     - name: dependencies
       run: sudo apt install swig doxygen r-base-core libboost-dev libproj-dev cmake libgsl-dev
     - name: configure
-      run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
+      run: mkdir build && cd build && cmake ..
     - name: build
       run: cd build && make && make build-python
     - name: test
