--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -6,12 +6,14 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v2
     - name: dependencies
-      run: sudo apt install swig doxygen r-base-core libboost-dev libproj-dev cmake libgsl-dev
+      run: sudo apt install swig doxygen r-base-core libboost-dev libproj-dev cmake libgsl-dev python3-setuptools python3-nose python3-numpy python3-scipy
     - name: configure
-      run: mkdir build && cd build && cmake -DCMAKE_CXX_FLAGS="-Werror" ..
+      run: mkdir build && cd build && cmake ..
     - name: build
-      run: make && make build-python
+      run: cd build && make && sudo make install-python
+    - name: test
+      run: nosetests3
