--- a/SWIG/CMakeLists.txt
+++ b/SWIG/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Set up swig
 find_package(SWIG REQUIRED)
 include(${SWIG_USE_FILE})
+file(GLOB SWIG_INTERFACE "titanlib.i")
 
 option(BUILD_PYTHON "Build Python SWIG module" ON)
 if(BUILD_PYTHON)
