--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -2,15 +2,12 @@ find_package(PythonLibs REQUIRED)
 include_directories(${PYTHON_INCLUDE_PATH})
 
 # Files to install with Python
-file(GLOB CPP_SOURCE_FILES ${CMAKE_SOURCE_DIR}/src)
-file(GLOB CPP_INCLUDE_FILES ${CMAKE_SOURCE_DIR}/include)
-file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/MANIFEST.in DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-file(COPY ${CPP_SOURCE_FILES}
-         DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
-file(COPY ${CPP_INCLUDE_FILES}
-         DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
- file(COPY ${SWIG_INTERFACE}
-         DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(GLOB CPP_SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.cpp ${CMAKE_SOURCE_DIR}/src/*.c)
+file(GLOB CPP_INCLUDE_FILES ${CMAKE_SOURCE_DIR}/include/*.h)
+#file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/MANIFEST.in DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+#file(COPY ${CPP_SOURCE_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/src)
+#file(COPY ${CPP_INCLUDE_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include)
+#file(COPY ${SWIG_INTERFACE} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 # Configure setup.py and copy to output directory
 set(SETUP_PY_IN ${CMAKE_CURRENT_SOURCE_DIR}/setup.in.py)
 set(SETUP_PY_OUT ${CMAKE_CURRENT_BINARY_DIR}/setup.py)
@@ -19,15 +16,45 @@ configure_file(${SETUP_PY_IN} ${SETUP_PY_OUT})
      #        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 # Install target to call setup.py
+MESSAGE(${CPP_SOURCE_FILES})
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/src)
+file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
+
+#configure_file(${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}/)
+#foreach(FILE ${CPP_SOURCE_FILES})
+#    get_filename_component(F ${FILE} NAME)
+#    # MESSAGE(${F})
+#    # MESSAGE(${CMAKE_CURRENT_BINARY_DIR})
+#    # MESSAGE(${CMAKE_SOURCE_DIR}/src/${F})
+#    # MESSAGE(${CMAKE_CURRENT_BINARY_DIR}/src/${F})
+#    MESSAGE("COPYING ${F}")
+#    configure_file(${CMAKE_SOURCE_DIR}/src/${F} ${CMAKE_CURRENT_BINARY_DIR}/src/${F})
+#endforeach()
+#foreach(FILE ${CPP_INCLUDE_FILES})
+#    get_filename_component(F ${FILE} NAME)
+#    configure_file(${CMAKE_SOURCE_DIR}/include/${F} ${CMAKE_CURRENT_BINARY_DIR}/include/${F})
+#endforeach()
+
 add_custom_target(install-python
-        COMMAND python3 ${SETUP_PY_OUT} install)
+    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_SOURCE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/src
+    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include
+    COMMAND ${CMAKE_COMMAND} -E copy ${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND python3 ${SETUP_PY_OUT} install)
 
 add_custom_target(install-python-user
-        COMMAND python3 ${SETUP_PY_OUT} install --user)
+    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_SOURCE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/src
+    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include
+    COMMAND ${CMAKE_COMMAND} -E copy ${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND python3 ${SETUP_PY_OUT} install --user)
 
 add_custom_target(build-python
-        COMMAND python3 ${SETUP_PY_OUT} build_ext)
+    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_SOURCE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/src
+    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include
+    COMMAND ${CMAKE_COMMAND} -E copy ${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND python3 ${SETUP_PY_OUT} build_ext)
 
 add_custom_target(develop-python
-        COMMAND python3 ${SETUP_PY_OUT} develop)
-
+    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_SOURCE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/src
+    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include
+    COMMAND ${CMAKE_COMMAND} -E copy ${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}
+    COMMAND python3 ${SETUP_PY_OUT} develop)
