Revert to using cmake for compiling python SWIG interface
It seems easier to develop code using this mechanism. It's not ideal for
building pip packages.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ install(TARGETS titanlib
 file(GLOB SWIG_INTERFACE "SWIG/titanlib.i")
 message('${SWIG_INTERFACE}')
 add_subdirectory(SWIG)
-add_subdirectory(python)
+# add_subdirectory(python)
 
 option(BUILD_DOC "Build documentation" ON)
 
