--- a/SWIG/CMakeLists.txt
+++ b/SWIG/CMakeLists.txt
@@ -2,6 +2,11 @@
 find_package(SWIG REQUIRED)
 include(${SWIG_USE_FILE})
 
+option(BUILD_PYTHON "Build Python SWIG module" ON)
+if(BUILD_PYTHON)
+    add_subdirectory(python)
+endif()
+
 option(BUILD_R "Build R SWIG module" ON)
 if(BUILD_R)
     add_subdirectory(R)
