Added version and added install-python-user and develop-python-user targets

--- a/SWIG/python/CMakeLists.txt
+++ b/SWIG/python/CMakeLists.txt
@@ -51,3 +51,7 @@ add_custom_target(develop-python
         DEPENDS _titanlib
         COMMAND python3 ${SETUP_PY_OUT} develop)
 
+add_custom_target(develop-python-user
+        DEPENDS _titanlib
+        COMMAND python3 ${SETUP_PY_OUT} develop --user)
+
