--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -4,7 +4,7 @@ include_directories(${PYTHON_INCLUDE_PATH})
 # Files to install with Python
 file(GLOB CPP_SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/*.cpp ${CMAKE_SOURCE_DIR}/src/*.c)
 file(GLOB CPP_INCLUDE_FILES ${CMAKE_SOURCE_DIR}/include/*.h)
-#file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/MANIFEST.in DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/MANIFEST.in DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 #file(COPY ${CPP_SOURCE_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/src)
 #file(COPY ${CPP_INCLUDE_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/include)
 #file(COPY ${SWIG_INTERFACE} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
@@ -35,26 +35,8 @@ file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 #    configure_file(${CMAKE_SOURCE_DIR}/include/${F} ${CMAKE_CURRENT_BINARY_DIR}/include/${F})
 #endforeach()
 
-add_custom_target(install-python
+add_custom_target(package-python
     COMMAND ${CMAKE_COMMAND} -E copy ${CPP_SOURCE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/src
     COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include
     COMMAND ${CMAKE_COMMAND} -E copy ${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}
-    COMMAND python3 ${SETUP_PY_OUT} install)
-
-add_custom_target(install-python-user
-    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_SOURCE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/src
-    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include
-    COMMAND ${CMAKE_COMMAND} -E copy ${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}
-    COMMAND python3 ${SETUP_PY_OUT} install --user)
-
-add_custom_target(build-python
-    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_SOURCE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/src
-    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include
-    COMMAND ${CMAKE_COMMAND} -E copy ${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}
-    COMMAND python3 ${SETUP_PY_OUT} build_ext)
-
-add_custom_target(develop-python
-    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_SOURCE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/src
-    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include
-    COMMAND ${CMAKE_COMMAND} -E copy ${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}
-    COMMAND python3 ${SETUP_PY_OUT} develop)
+    COMMAND python3 ${SETUP_PY_OUT} sdist)
