Changed doxygen setup

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 cmake_minimum_required(VERSION 2.8)
 
-# Change policy to allow a version to be set
-cmake_policy(SET CMP0048 NEW)
-
+# Determine titanlib version
 file (READ "${CMAKE_CURRENT_SOURCE_DIR}/include/titanlib.h" VERSION0)
 project(titanlib)
 string(REGEX REPLACE "^.+define TITANLIB_VERSION \"([^\n]+)\".+" "\\1" PROJECT_VERSION ${VERSION0})
 
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+
+# Set compiler flags
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra -Wno-unused-parameter -Wno-sign-compare -fPIC")
 if (CMAKE_BUILD_TYPE MATCHES "DEBUG")
@@ -18,10 +19,6 @@ else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
     set(CMAKE_BUILD_TYPE Release)
 endif()
-
-#set(CMAKE_BUILD_TYPE Debug)
-
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 # Add libtitanlib
 include_directories(./include)
@@ -38,43 +35,34 @@ target_include_directories(titanlib PUBLIC "${Boost_INCLUDE_DIRS}")
 target_include_directories(titanlib PUBLIC "${GSL_INCLUDE_DIRS}")
 target_include_directories(titanlib PUBLIC "${PROJ4_INCLUDE_DIR}")
 install(TARGETS titanlib
-      EXPORT CMakeSwigTargets
-      PUBLIC_HEADER DESTINATION include
-      ARCHIVE DESTINATION lib
-      LIBRARY DESTINATION lib
-      )
+    EXPORT CMakeSwigTargets
+    PUBLIC_HEADER DESTINATION include
+    ARCHIVE DESTINATION lib
+    LIBRARY DESTINATION lib
+    )
 
-# Add swig subdirectory
+# SWIG subdirectory
 file(GLOB SWIG_INTERFACE "SWIG/titanlib.i")
 message('${SWIG_INTERFACE}')
 add_subdirectory(SWIG)
 add_subdirectory(python)
 
+# Documentation
 option(BUILD_DOC "Build documentation" ON)
-
-# check if Doxygen is installed
 find_package(Doxygen)
 if (DOXYGEN_FOUND)
-    # set input and output files
     set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/docs/config.in)
     set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)
-
-    # request to configure the file
     configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)
-    message("Doxygen build started")
-
-    # note the option ALL which allows to build the docs together with
-    # the application
-    add_custom_target( doc_doxygen ALL
+    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/docs/DoxygenLayout.xml" "DoxygenLayout.xml" @ONLY)
+    add_custom_target(docs ALL
         COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
         WORKING_DIRECTORY
         ${CMAKE_CURRENT_BINARY_DIR}
         COMMENT "Generating API
         documentation with Doxygen"
         VERBATIM )
-else (DOXYGEN_FOUND)
-    message("Doxygen need to be
-    installed to generate the
-    doxygen documentation")
-endif (DOXYGEN_FOUND)
+else()
+    message(STATUS "Documentation generation disabled. Doxygen needs to be installed to generate documentation.")
+endif()
 
