--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,16 +15,18 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter -Wno-sign-compare -fPIC")
 if (CMAKE_BUILD_TYPE MATCHES "DEBUG")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -pg --coverage")
+   set(CMAKE_CXX_FLAGS_DEBUG "-O0 -fPIC -g -pg -rdynamic --coverage")
+   set(CMAKE_LFLAGS_DEBUG " --coverage")
+   add_definitions("-DDEBUG")
 else()
     find_package(OpenMP)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 ${OpenMP_CXX_FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fPIC ${OpenMP_CXX_FLAGS}")
 endif()
 
 # Add libtitanlib
 include_directories(./include)
 file(GLOB SOURCES "src/*.cpp" "src/*.c")
-add_library(titanlib SHARED ${SOURCES})
+add_library(titanlib ${SOURCES})
 set_target_properties(titanlib PROPERTIES PUBLIC_HEADER "include/titanlib.h")
 find_package(Boost REQUIRED)
 find_package(GSL REQUIRED)
