--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,15 +12,21 @@ enable_language(CXX)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter -Wno-sign-compare -fPIC")
+if (NOT CMAKE_BUILD_TYPE)
+   message(STATUS "CMAKE_BUILD_TYPE is not set, switching to RELEASE")
+   set(CMAKE_BUILD_TYPE "RELEASE" CACHE STRING
+      "Choose the type of build, options are: NONE DEBUG RELEASE."
+      FORCE)
+endif()
+string(TOUPPER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE)
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -Wno-reorder -Wno-sign-compare -Wl,-init,initialize_omp")
 if (CMAKE_BUILD_TYPE MATCHES "DEBUG")
    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -fPIC -g -pg -rdynamic --coverage")
    set(CMAKE_LFLAGS_DEBUG " --coverage")
    add_definitions("-DDEBUG")
-else()
-    find_package(OpenMP)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -fPIC ${OpenMP_CXX_FLAGS}")
+elseif(CMAKE_BUILD_TYPE MATCHES "RELEASE")
+   find_package(OpenMP)
+   set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fPIC ${OpenMP_CXX_FLAGS}")
 endif()
 
 # Add libtitanlib
