--- a/extras/python/CMakeLists.txt
+++ b/extras/python/CMakeLists.txt
@@ -35,12 +35,11 @@ file(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include)
 #    configure_file(${CMAKE_SOURCE_DIR}/include/${F} ${CMAKE_CURRENT_BINARY_DIR}/include/${F})
 #endforeach()
 
+set_source_files_properties(../SWIG/${PROJECT_NAME}.i PROPERTIES CPLUSPLUS ON)
+swig_add_library(titanlib2 TYPE SHARED LANGUAGE python SOURCES ../SWIG/${PROJECT_NAME}.i)
+set_target_properties(_titanlib2 PROPERTIES LINKER_LANGUAGE CXX)
 add_custom_target(package-python
     COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_SOURCE_DIR}/README.md ${CMAKE_CURRENT_BINARY_DIR}
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/extras/SWIG/python/titanlibPYTHON_wrap.cxx ${CMAKE_CURRENT_BINARY_DIR}/src
-    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_BINARY_DIR}/extras/SWIG/python/titanlib.py ${CMAKE_CURRENT_BINARY_DIR}
     COMMAND ${CMAKE_COMMAND} -E copy ${CPP_SOURCE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/src
-    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include
-    COMMAND ${CMAKE_COMMAND} -E copy ${SWIG_INTERFACE} ${CMAKE_CURRENT_BINARY_DIR}
-    COMMAND python3 ${SETUP_PY_OUT} sdist)
-add_dependencies(package-python build-python)
+    COMMAND ${CMAKE_COMMAND} -E copy ${CPP_INCLUDE_FILES} ${CMAKE_CURRENT_BINARY_DIR}/include)
+add_dependencies(package-python _titanlib2)
