--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,29 +8,38 @@ string(REGEX REPLACE "^.+define TITANLIB_VERSION \"([^\n]+)\".+" "\\1" PROJECT_V
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 # Set compiler flags
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -Wall -Wextra -Wno-unused-parameter -Wno-sign-compare -fPIC")
+enable_language(CXX)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+if (NOT CMAKE_BUILD_TYPE)
+   message(STATUS "CMAKE_BUILD_TYPE is not set, switching to RELEASE")
+   set(CMAKE_BUILD_TYPE "RELEASE" CACHE STRING
+      "Choose the type of build, options are: NONE DEBUG RELEASE."
+      FORCE)
+endif()
+string(TOUPPER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE)
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -Wno-reorder -Wno-sign-compare -Wl,-init,initialize_omp")
 if (CMAKE_BUILD_TYPE MATCHES "DEBUG")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g -pg --coverage")
-else()
-    find_package(OpenMP)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 ${OpenMP_CXX_FLAGS}")
+   set(CMAKE_CXX_FLAGS_DEBUG "-O0 -fPIC -g -pg -rdynamic --coverage")
+   set(CMAKE_LFLAGS_DEBUG " --coverage")
+   add_definitions("-DDEBUG")
+elseif(CMAKE_BUILD_TYPE MATCHES "RELEASE")
+   find_package(OpenMP)
+   set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fPIC ${OpenMP_CXX_FLAGS}")
 endif()
 
 # Add libtitanlib
 include_directories(./include)
 file(GLOB SOURCES "src/*.cpp" "src/*.c")
-add_library(titanlib SHARED ${SOURCES})
+add_library(titanlib ${SOURCES})
 set_target_properties(titanlib PROPERTIES PUBLIC_HEADER "include/titanlib.h")
 find_package(Boost REQUIRED)
 find_package(GSL REQUIRED)
-find_package(PROJ4 REQUIRED)
 target_link_libraries(titanlib "${Boost_LIBRARIES}")
 target_link_libraries(titanlib "${GSL_LIBRARIES}")
-target_link_libraries(titanlib "${PROJ4_LIBRARY}")
 target_include_directories(titanlib PUBLIC "${Boost_INCLUDE_DIRS}")
 target_include_directories(titanlib PUBLIC "${GSL_INCLUDE_DIRS}")
-target_include_directories(titanlib PUBLIC "${PROJ4_INCLUDE_DIR}")
 install(TARGETS titanlib
     EXPORT CMakeSwigTargets
     PUBLIC_HEADER DESTINATION include
