--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,14 +19,24 @@ if (NOT CMAKE_BUILD_TYPE)
       FORCE)
 endif()
 string(TOUPPER ${CMAKE_BUILD_TYPE} CMAKE_BUILD_TYPE)
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -Wno-reorder -Wno-sign-compare -Wl,-init,initialize_omp")
+
+if(APPLE)
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -Wno-reorder -Wno-sign-compare -Wno-c++11-narrowing")
+else()
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -Wno-reorder -Wno-sign-compare -Wl,-init,initialize_omp")
+endif()
+
 if (CMAKE_BUILD_TYPE MATCHES "DEBUG")
    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -fPIC -g -pg -rdynamic --coverage")
    set(CMAKE_LFLAGS_DEBUG " --coverage")
    add_definitions("-DDEBUG")
 elseif(CMAKE_BUILD_TYPE MATCHES "RELEASE")
    find_package(OpenMP)
-   set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fPIC ${OpenMP_CXX_FLAGS}")
+    if(APPLE)
+        set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fPIC")
+    else()
+        set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fPIC ${OpenMP_CXX_FLAGS}")
+    endif()
 endif()
 
 # Add libtitanlib
@@ -73,4 +83,3 @@ else()
     message(STATUS "Documentation generation disabled. Doxygen needs to be installed to generate documentation.")
 endif()
 endif()
-
