Refactor SWIG so that the layout is the same as in gridpp

--- a/swig/CMakeLists.txt
+++ b/swig/CMakeLists.txt
@@ -2,11 +2,12 @@
 find_package(SWIG REQUIRED)
 include(${SWIG_USE_FILE})
 
+# Add subdirectories for each language if desired
 option(BUILD_PYTHON "Build Python SWIG module" ON)
 if(BUILD_PYTHON)
     add_subdirectory(python)
+    add_subdirectory(python-packaging)
 endif()
-
 option(BUILD_R "Build R SWIG module" ON)
 if(BUILD_R)
     add_subdirectory(R)
