--- a/tests/files/buddy_check.yml
+++ b/tests/files/buddy_check.yml
@@ -1,29 +1,26 @@
 - description: Normal dataset
   dataset:
-     lats: [0, 1, 2, .NAN, .NAN, 5, 6, 7, 8]
-     lons: [0, 1, 2, 3, 4, .NAN, .NAN, 7, 8]
-     elevs: [0, 1, 2, 3, 4, 5, 6, .NAN, .NAN]
-     values: [0, 1, .NAN, 0, .NAN, 1, .NAN, 1, .NAN]
+     lats: [60, 60, 60, 60, 60, 60, 60, 60, 60, 60]
+     lons: [10.001, 10.002, 10.003, 10.004, 10.005, 10.006, 10.007, 10.008, 10.009, 10.01]
+     elevs: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+     values: [0, 0, 0, 0, 0, 0, 0, 0, 0.1, 1]
+  base_test: buddy_check
+  base_args:
+      radius: [10000]
+      num_min: [1]
+      threshold: 1
+      max_elev_diff: 200
+      elev_gradient: -0.0065
+      min_std: 0.01
+      num_iterations: 2
   tests:
-      - type: range_check
-        args:
-            min: [0]
-            max: [0.5]
-        expected: [0, 1, 1, 0, 1, 1, 1, 1, 1]
-      - type: range_check
-        args:
-            min: [1, 1, 1, 1, 1, 1, 1, 1, 1]
-            max: [1, 1, 3, 3, 1, 1, 1, 1, 1]
-        expected: [1, 0, 1, 1, 1, 0, 1, 0, 1]
-- description: All empty dataset
-  dataset:
-     lats: []
-     lons: []
-     elevs: []
-     values: []
-  tests:
-      - type: range_check
-        args:
-            min: [0]
-            max: [0.5]
-        expected: []
+      - expected: [0, 0, 0, 0, 0, 0, 0, 0, 1, 1]
+      - args:
+            min_std: 0.3
+        expected: [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]
+      - args:
+            min_std: 1
+        expected: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+      - args:
+            num_min: [20]
+        expected: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
