Added workflow for building wheels

--- a/swig/CMakeLists.txt
+++ b/swig/CMakeLists.txt
@@ -4,11 +4,14 @@ include(${SWIG_USE_FILE})
 
 # Add subdirectories for each language if desired
 option(BUILD_PYTHON "Build Python SWIG module" ON)
-if(BUILD_PYTHON)
-    add_subdirectory(python)
+if(BUILD_PACKAGE)
     add_subdirectory(python-packaging)
-endif()
-option(BUILD_R "Build R SWIG module" ON)
-if(BUILD_R)
-    add_subdirectory(R)
+else()
+    if(BUILD_PYTHON)
+        add_subdirectory(python)
+    endif()
+    option(BUILD_R "Build R SWIG module" ON)
+    if(BUILD_R)
+        add_subdirectory(R)
+    endif()
 endif()
