Fix workflow actions
* Update to new ubuntu on the main workflow (probably explains why
  it never gets scheduled)
* Only trigger wheel generation on tags

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     steps:
       - uses: actions/checkout@v2
@@ -12,10 +12,25 @@ jobs:
         with:
             python-version: '3.7'
       - name: dependencies
-        run: sudo apt update -qq && sudo apt install swig doxygen r-base-core libboost-dev cmake libgsl-dev python3-setuptools python3-nose python3-numpy python3-scipy
+        run: |
+            sudo apt update -qq
+            sudo apt install swig libboost-dev libgsl-dev cmake python3-setuptools python3-numpy python3-pip lcov
       - name: configure
-        run: mkdir build && cd build && cmake ..
+        run: mkdir build && cd build && cmake -DBUILD_R=no -DCMAKE_BUILD_TYPE=DEBUG ..
       - name: build
-        run: cd build && make && sudo make install-python
+        run: cd build && VERBOSE=1 make develop-python-user
       - name: test
-        run: nosetests3
+        run: |
+            cd build
+            /usr/bin/python3 -m pip install coverage nose
+            make tests
+            lcov --directory CMakeFiles/gridpp.dir/src/api --capture --output-file coverage.info
+            lcov --remove coverage.info '/usr/*' --output-file coverage.info
+            lcov --list coverage.info
+            # - name: test
+            # run: |
+            # /usr/bin/python3 -c "import gridpp; print(gridpp.version())"
+            # /usr/bin/python3 -m pip install --upgrade pip
+            # /usr/bin/python3 -m pip install coverage nose
+            # coverage run --omit */*-packages/*,*tests* -m nose
+            # coverage report
