Sync changes from gridpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ string(REGEX REPLACE "^.+define TITANLIB_VERSION \"([^\n]+)\".+" "\\1" PROJECT_V
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 option(BUILD_PACKAGE "Build package" OFF)
+file(GLOB SOURCES "src/*.cpp" "src/*.c")
 
 if (BUILD_PACKAGE)
 
@@ -38,6 +39,7 @@ else()
     if(APPLE)
         set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -Wno-reorder -Wno-sign-compare -Wno-c++11-narrowing")
     else()
+        # SWIG generates a lot of warnings
         set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wfatal-errors -Wno-reorder -Wno-sign-compare -Wl,-init,initialize_omp")
     endif()
 
@@ -52,24 +54,26 @@ else()
         else()
             set(CMAKE_CXX_FLAGS_RELEASE "-O3 -fPIC ${OpenMP_CXX_FLAGS}")
         endif()
+    else()
+        message(FATAL_ERROR "Unknown release type")
     endif()
+
+    add_library(titanlib ${SOURCES})
+    set_target_properties(titanlib PROPERTIES PUBLIC_HEADER "include/titanlib.h")
+    target_link_libraries(titanlib "${Boost_LIBRARIES}")
+    target_link_libraries(titanlib "${GSL_LIBRARIES}")
+    target_include_directories(titanlib PUBLIC "${Boost_INCLUDE_DIRS}")
+    target_include_directories(titanlib PUBLIC "${GSL_INCLUDE_DIRS}")
+    install(TARGETS titanlib
+        EXPORT CMakeSwigTargets
+        PUBLIC_HEADER DESTINATION include
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
+        )
 endif()
 
 # Add libtitanlib
 include_directories(./include)
-file(GLOB SOURCES "src/*.cpp" "src/*.c")
-add_library(titanlib ${SOURCES})
-set_target_properties(titanlib PROPERTIES PUBLIC_HEADER "include/titanlib.h")
-target_link_libraries(titanlib "${Boost_LIBRARIES}")
-target_link_libraries(titanlib "${GSL_LIBRARIES}")
-target_include_directories(titanlib PUBLIC "${Boost_INCLUDE_DIRS}")
-target_include_directories(titanlib PUBLIC "${GSL_INCLUDE_DIRS}")
-install(TARGETS titanlib
-    EXPORT CMakeSwigTargets
-    PUBLIC_HEADER DESTINATION include
-    ARCHIVE DESTINATION lib
-    LIBRARY DESTINATION lib
-    )
 
 # Documentation
 option(BUILD_DOC "Build documentation" ON)
